--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,42 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Spotify</title>
+  <link href="./css/main.css" rel="stylesheet" />
 </head>
+
 <body>
-Premium Discover Help Download
+  <header>
+    <div class="menu-header">
+      <div class="imageLogo">
+      </div>
+      <div class="div-nav">
+        <nav>
+          <ul class="menu-flex">
+            <li><a href="">Premium</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Help</a></li>
+            <li><a href="">Download</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <section class="imageCenter">
+    <div class="div_foto_text">
+      <h1> Music for everyone.</h1>
+      <div>
+        <h3>Spotify is now free on mobile, tablet and computer. </h3>
+      </div>
+      <div>
+        <h3> Listen to the right music, wherever you are.</h3>
+      </div>
+    </div>
+  </section>
+</br>
+</br>
+</br>
+  <div class="div-whats" >
+    What’s on Spotify?
+  </div>
+</br>
+</br>
+</br>
 
-Music for everyone.
-Spotify is now free on mobile, tablet and computer.
-Listen to the right music, wherever you are.
+  <div class="div-box-0">
 
-What’s on Spotify?
+    <div class="div-box-1">
+      <div class="div-box-music"> </div>
+      <div class="textGreen">
+        Millions of Songs</div>
+      <p>
+        There are millions of
+        songs on Spotify
+      </p>
+    </div>
 
-Millions of Songs
-There are millions of
-songs on Spotify
+    <div class="div-box-1">
+      <div class="div-box-high-quality"> </div>
+      <div style="display: flex; flex-direction: column;">
+        <div class="textGreen">
+          HD Music</div>
+        <p>
+          Listen to music as if you
+          were listening live
+        </p>
+      </div>
+    </div>
 
-HD Music
-Listen to music as if you
-were listening live
 
-Stream Everywhere
-Stream music on your
-smartphone, tablet or
-computer
+    <div class="div-box-1">
+      <div class="div-box-devices"> </div>
+      <div style="display: flex; flex-direction: column;">
+        <div class="textGreen">
+          Stream Everywhere</div>
+        <p>
+          Stream music on your
+          smartphone, tablet or
+          computer
+        </p>
+      </div>
+    </div>
+  </div>
 
-It’s as yeezy as Kanye West.
-Search
-Know what you want to listen to?
-Just search and hit play.
-Browse
-Check out the latest charts,
-brand new releases and great
-playlists for right now.
-Discover
-Enjoy new music every Monday
-with your own personal playlist.
-Or sit back and enjoy Radio.
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+
+<div class="block-green">
+
+
+
+
+
+  It’s as yeezy as Kanye West.
+  Search
+  Know what you want to listen to?
+  Just search and hit play.
+  Browse
+  Check out the latest charts,
+  brand new releases and great
+  playlists for right now.
+  Discover
+  Enjoy new music every Monday
+  with your own personal playlist.
+  Or sit back and enjoy Radio.
+
+
+
+
+</div>
 </body>
+
 </html>
